log/build_2026-04-01_17-05-29/pendulum_sim/stderr.log
  File "/home/eniya/ros2_ws/install/pendulum_sim/lib/python3.10/site-packages/pendulum_sim/controller_node.py", line 7
    	def __init__(self);
    	                  ^
SyntaxError: expected ':'

